[package]
name = "object-storage-sdk"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "object-storage-sdk is the client sdk of object-storage-lib."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.10", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tihu = "0.1"